# test-avangard

./: .env.example  LICENSE  README.md  TASK.md
backend/: alembic.ini  pyproject.toml
backend/src/: app.py  db.py  dependencies.py  exceptions.py  settings.py  utils.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 252b913c6b09_add_task.py  5df2e18fccaf_add_user.py  6ec395596333_alter_user_password.py  84635bbe3143_alter_user_password.py  fe02e60d623c_add_task1.py
backend/src/dal/: task.py  user.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/routes/: task.py  user.py  websockets.py
backend/src/schemas/: task.py  user.py
backend/tests/: conftest.py  test_tasks.py  test_user.py
docker/: docker-compose.local.yaml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx  material-tailwind.d.ts  react.d.ts
frontend/src/components/alert/: alert.tsx  alertHanler.tsx  index.ts
frontend/src/components/authForm/: authForm.tsx  index.tsx  loginForm.tsx  signInForm.tsx
frontend/src/components/taskCard/: index.tsx  singleCardWrapper.tsx  statusButtons.tsx  taskCard.tsx  taskCardCreate.tsx  taskCardEdit.tsx  taskCardRead.tsx
frontend/src/components/taskList/: pagination.tsx  search.tsx  taskSection.tsx
frontend/src/components/taskSection/: index.tsx  pagination.tsx  search.tsx  taskSection.tsx  taskTable.tsx  taskTableBody.tsx  taskTableHeader.tsx  taskTableRow.tsx
frontend/src/core/: httpClient.ts  utils.ts  webClient.ts
frontend/src/lib/: error.ts  fetchers.ts
(+6 files in other folders)
